pods/labels.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: apple
  labels:
    fruit_name: apple
    imported_from: USA
spec:
  containers:
    - name: centos
      image: centos:7
      command:
      - sleep
      - "10000000"

---
apiVersion: v1
kind: Pod
metadata:
  name: orange
  labels:
    fruit_name: orange
    imported_from: INDIA
    sample.sample: sample
spec:
  containers:
    - name: centos
      image: centos:7
      command:
      - sleep
      - "10000000"
---
apiVersion: v1
kind: Pod
metadata:
  name: orange-annotations
  annotations:
    store.invetory/fruit-name: apple
    country/imported: USA
    stork.libopenstorage.org/skipresource: "false"
spec:
  containers:
    - name: centos
      image: centos:7
      command:
      - sleep
      - "10000000"
---
