pods/pod-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample4
spec:
  containers:
  - name: centos
    image: centos:7
    command:
    - sleep
    - "10000"
