pods/pod-lifecycle.yml
apiVersion: v1
kind: Pod
metadata:
 name: sample6
spec:
 containers:
   - image: nginx
     name: client
     lifecycle:
       postStart:
         exec:
           command:
             - sh
             - -c
             - sleep 10 && exit 0
