pods/pod-port.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample2
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
      - name: http
      containersport: 80
      hostport: 80
