pods/pod-resource.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample7
spec:
  containers:
  - image: centos:7
    name: centos
    command:
    - sleep
    - "1000000"
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "125m"
