pods/pod-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample6
spec:
  containers:
  - image: k8s.gcr.io/test-webserver
    name: test-container
    volumeMounts:
    - mountPath: /test-ebs
      name: test-volume
  volumes:
  - name: test-volume
    # This AWS EBS volume must already exist.
    awsElasticBlockStore:
      volumeID: "vol-071d6a55ff71b97cc"
      fsType: ext4
