pods/probes.yml
apiVersion: v1
kind: Pod
metadata:
  name: readiness
spec:
  containers:
    - name: readiness
      image: zelarsoft/zs01-readiness
      readinessProbe:
        exec:
          command:
          - cat
          - /sample.txt
        initialDelaySeconds: 5
        periodSeconds: 5
      livenessProbe:
        exec:
          command:
          - cat
          - /sample.txt
        initialDelaySeconds: 90
        periodSeconds: 5
