pods/secrate.yml
apiVersion: v1
kind: Pod
metadata:
  name: secrets
spec:
  containers:
    - name: sample
      image: centos:7
      command:
        - sleep
        - "100000"
---
apiVersion: v1
kind: Pod
metadata:
  name: secrets-mount
spec:
  containers:
    - name: centos
      image: centos:7
      command:
        - sleep
        - "100000"
      volumeMounts:
        - name: secrets
          mountPath: /data
  volumes:
    - name: secrets
      secret:
        secretName: sample

---
apiVersion: v1
kind: Pod
metadata:
  name: secrets-private-registry
spec:
  imagePullSecrets:
    - name: regcred
  containers:
    - name: centos
      image: zelarsoft/private-demo
