pods/security-con.yml
apiVersion: v1
kind: Pod
metadata:
  name: security
spec:
  containers:
    - name: readiness
      image: zelarsoft/zs01-security
      imagePullPolicy: Always
      securityContext:
        runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: privileged
spec:
  containers:
    - name: docker
      image: docker
      securityContext:
        privileged: true
      command:
      - sleep
      - "1000000"
