pods/volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
    - image: centos:8
      name: test-container
      command:
        - sleep
        - "100000"
      volumeMounts:
        - mountPath: /cache
          name: cache-volume
  volumes:
    - name: cache-volume
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hp
spec:
  containers:
    - image: centos:7
      name: test-container
      command:
        - sleep
        - "10000"
      volumeMounts:
        - mountPath: /test-pd
          name: test-volume
  volumes:
    - name: test-volume
      hostPath:
        path: /root/demo
        type: DirectoryOrCreate
